k8s/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: novoceo
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: rg.fr-par.scw.cloud/funcscwjeromet1q1hfov/novoceo-front:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            requests:
              memory: "16Mi"
              cpu: "20m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 30
      restartPolicy: Always
