k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: novoceo
  labels:
    app: front
spec:
  type: ClusterIP
  selector:
    app: front
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
